fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -71,7 +71,7 @@ button p {
     border: none;
     outline: none;
     color: black;
-    padding: 0px 0px 0px 16px !important;
+    padding: 0px 0px 0px 8px !important;
     background-color: inherit;
     font-family: inherit; /* Important for vertical align on mobile phones */
     margin: 0; /* Important for vertical align on mobile phones */
@@ -188,7 +188,7 @@ img {
     font-size: 20px;
 }
 
-@media only screen and (max-width: 750px){
+@media only screen and (max-width: 850px){
     
     img {
         width: 100%;
